# python-web-boilerplate

./: .coveragerc  .env.example  .env.local  .env.test  .gitignore  .travis.yml  Dockerfile  Makefile  Pipfile  README.md  apihelper.py  app.py  dependecies.sh  dev-requirements.txt  dev_env.sh  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements.txt  run.sh  setup.cfg
.github/: dependabot.yml
application/: __init__.py  config.py  hasher.py
application/api/: __init__.py  health.py  user.py
application/storage/: __init__.py  db.py  token.py  user.py
boilerplateapp/: __init__.py  cli.py  config.py  extensions.py  handlers.py  hasher.py  responses.py
boilerplateapp/api/: __init__.py  auth.py  health.py  hello.py  user.py
boilerplateapp/helpers/: __init__.py  decorators.py  passlib.py
boilerplateapp/models/: user.py
boilerplateapp/schemas/: __init__.py  user.py
boilerplateapp/storage/: __init__.py  db.py  token.py  user.py
test/: conftest.py  test_hasher.py
test/api/: test_user.py
tests/: conftest.py  factories.py  test_handlers.py  test_hasher.py  test_responses.py  utils.py
tests/api/: test_auth.py  test_health.py  test_hello.py  test_user.py
tests/models/: test_user_model.py
