[tool.poetry]
name = "python-web-boilerplate"
version = "0.1.0"
description = "An opinionated and best-practices boilerplate for a modern Flask-based web backend"
authors = ["Sven-Hendrik Haase <svenstaro@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "*"
passlib = "~=1.7.0"
marshmallow = "~=2.20"
webargs = "~=5.5"
alembic = "~=1.1"
requests = "~=2.18"
pwgen = "~=0.7"
"psycopg2" = "*"
retry = "~=0.9"
Flask = "~=1.0"
Flask-SQLAlchemy = "~=2.4"
"argon2_cffi" = "*"
SQLAlchemy = "~=1.3"
SQLAlchemy-Utils = "~=0.34"

[tool.poetry.dev-dependencies]
flake8 = "*"
flake8-docstrings = "*"
flake8-print = "*"
flake8-commas = "*"
flake8-bugbear = "*"
flake8-string-format = "*"
pytest = "*"
pytest-cov = "*"
pytest-flask = "*"
pytest-watch = "*"
hypothesis = "*"
ipython = "*"
flask-shell-ipython = "*"
freezegun = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
