[tool.poetry]
name = "python-web-boilerplate"
version = "0.1.0"
description = "An opinionated and best-practices boilerplate for a modern FastAPI-based web backend"
authors = ["Sven-Hendrik Haase <svenstaro@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.3"
fastapi = "^0.61.0"
orm = "^0.1.5"
asyncpg = "^0.21.0"
hypercorn = "^0.10.2"
tortoise-orm = "^0.16.14"
python-jose = {version = "^3.2", extras = ["cryptography"]}
passlib = "^1.7.2"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
